[tool.poetry]
name = "matplotlibstockcharts"
version = "0.1.0"
description = "Learn to build quick and easy stock charts using matplotlib's pyplot!"
authors = ["styvio"]
license = "MIT"
packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
main = "idk:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

